--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Video Incrustado en HTML5</title>
 </head>
 <body>
-    <h1>Video Incrustado en HTML5</h1>
-    <video controls>
+    <h1>Video Incrustado en HTML5 con Atributos Adicionales</h1>
+    <video controls autoplay loop muted poster="poster_image.jpg">
         <source src="Never_Gonna_Give_You_Up_1.mp4" type="video/mp4">
         <source src="Never_Gonna_Give_You_Up_2.webm" type="video/webm">
         <source src="Never_Gonna_Give_You_Up_3.ogv" type="video/ogg">
